--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -25,8 +25,11 @@ body {
 /* Blocks */
 @import "blocks/page";
 @import "blocks/main";
+@import "blocks/modal";
 @import "blocks/tabs";
 @import "blocks/timer";
+@import "blocks/wrapper";
+
 @import "blocks/footer";
 
 
