--- a/src/assets/sass/style.scss
+++ b/src/assets/sass/style.scss
@@ -26,6 +26,7 @@ body {
 @import "blocks/page";
 @import "blocks/main";
 @import "blocks/modal";
+@import "blocks/menu";
 @import "blocks/tabs";
 @import "blocks/timer";
 @import "blocks/wrapper";
